terraform-alicloud-eci-jenkins: add jenkins admin user password related vars, comment out jenkins_casc_cloud_docker

--- a/TerraformWorkShop/Alicloud/ECI-Jenkins/jcasc-default-config.yaml
+++ b/TerraformWorkShop/Alicloud/ECI-Jenkins/jcasc-default-config.yaml
@@ -10,9 +10,9 @@ jenkins:
       allowsSignup: false
       enableCaptcha: false
       users:
-        - id: $${jenkins-admin-user}
+        - id: $${jenkins_admin_user}
           name: Jenkins Admin
-          password: $${jenkins-admin-password}
+          password: $${jenkins_admin_password}
 unclassified:
   location:
     adminAddress: null
