--- a/TerraformWorkShop/System/VyOS-vault/vault/vault.service
+++ b/TerraformWorkShop/System/VyOS-vault/vault/vault.service
@@ -10,7 +10,7 @@ StartLimitBurst=3
 
 [Service]
 Type=notify
-# EnvironmentFile=/etc/vault.d/vault.env
+EnvironmentFile=-/etc/vault.d/vault.env
 User=${user}
 Group=${group}
 ProtectSystem=full
@@ -22,6 +22,7 @@ AmbientCapabilities=CAP_IPC_LOCK
 CapabilityBoundingSet=CAP_SYSLOG CAP_IPC_LOCK
 NoNewPrivileges=yes
 ExecStart=/usr/bin/vault server -config=/etc/vault.d/vault.hcl
+ExecStartPost=-/bin/bash -c "[ -f ${post_script_path} ] && ${post_script_path}"
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
 KillSignal=SIGINT
