--- a/TerraformWorkShop/System/VyOS-lldap/lldap/lldap.service
+++ b/TerraformWorkShop/System/VyOS-lldap/lldap/lldap.service
@@ -7,8 +7,9 @@ After=network.target
 [Service]
 Type=simple
 User=${user}
-ExecStart=/usr/bin/lldap run --config-file /etc/lldap/lldap_config.toml
 AmbientCapabilities=CAP_NET_BIND_SERVICE
+ExecStartPre=/usr/bin/sleep 5
+ExecStart=/usr/bin/lldap run --config-file /etc/lldap/lldap_config.toml
 PrivateTmp=true
 PrivateDevices=true
 ProtectHome=true
