--- a/TerraformWorkShop/System/VyOS-vault/vault/vault.service
+++ b/TerraformWorkShop/System/VyOS-vault/vault/vault.service
@@ -21,6 +21,7 @@ SecureBits=keep-caps
 AmbientCapabilities=CAP_IPC_LOCK
 CapabilityBoundingSet=CAP_SYSLOG CAP_IPC_LOCK
 NoNewPrivileges=yes
+ExecStartPre=/usr/bin/sleep 5
 ExecStart=/usr/bin/vault server -config=/etc/vault.d/vault.hcl
 ExecStartPost=-/bin/bash -c "[ -f ${post_script_path} ] && ${post_script_path}"
 ExecReload=/bin/kill --signal HUP $MAINPID
