--- a/TerraformWorkShop/System/VyOS-consul/traefik/traefik.service
+++ b/TerraformWorkShop/System/VyOS-consul/traefik/traefik.service
@@ -4,7 +4,7 @@
 [Unit]
 Description="Traefik Proxy"
 Documentation=https://docs.traefik.io
-After=network-online.target step-ca.service
+After=network-online.target consul.service
 AssertFileIsExecutable=/usr/bin/traefik
 
 [Service]
