--- a/TerraformWorkShop/System/VyOS-vault/vault/vault.service
+++ b/TerraformWorkShop/System/VyOS-vault/vault/vault.service
@@ -2,7 +2,7 @@
 [Unit]
 Description="HashiCorp Vault - A tool for managing secrets"
 Documentation=https://developer.hashicorp.com/vault/docs
-Requires=network-online.target
+Requires=network-online.target consul.service
 After=network-online.target consul.service
 ConditionFileNotEmpty=/etc/vault.d/vault.hcl
 StartLimitIntervalSec=60
