--- a/TerraformWorkShop/System/VyOS-minio/minio/minio.service
+++ b/TerraformWorkShop/System/VyOS-minio/minio/minio.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=MinIO
 Documentation=https://min.io/docs/minio/linux/index.html
-Wants=network-online.target
-After=network-online.target
+Wants=network-online.target consul.service
+After=network-online.target consul.service
 AssertFileIsExecutable=/usr/local/bin/minio
 
 [Service]
@@ -13,7 +13,7 @@ Group=${group}
 # ProtectProc=invisible
 
 EnvironmentFile=-${EnvironmentFile}
-ExecStartPre=/bin/bash -c "if [ -z \"$${MINIO_VOLUMES}\" ]; then echo \"Variable MINIO_VOLUMES not set in ${EnvironmentFile}\"; exit 1; fi"
+ExecStartPre=/bin/bash -c "sleep 8; if [ -z \"$${MINIO_VOLUMES}\" ]; then echo \"Variable MINIO_VOLUMES not set in ${EnvironmentFile}\"; exit 1; fi"
 ExecStart=/usr/local/bin/minio server $MINIO_OPTS $MINIO_VOLUMES
 
 # MinIO RELEASE.2023-05-04T21-44-30Z adds support for Type=notify (https://www.freedesktop.org/software/systemd/man/systemd.service.html#Type=)
