--- a/TerraformWorkShop/System/VyOS-consul/consul/consul.service
+++ b/TerraformWorkShop/System/VyOS-consul/consul/consul.service
@@ -12,13 +12,13 @@ User=${user}
 Group=${group}
 TimeoutStartSec=infinity
 AmbientCapabilities=CAP_NET_BIND_SERVICE
-ExecStartPre=/usr/bin/sleep 3
+# ExecStartPre=/usr/bin/sleep 3
 ExecStart=/usr/bin/consul agent -config-dir=/etc/consul.d/
-# ExecStartPost=
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
 KillSignal=SIGTERM
 Restart=on-failure
+RestartSec=3
 LimitNOFILE=65536
 
 [Install]
