--- a/TerraformWorkShop/System/VyOS-consul/traefik/traefik.service
+++ b/TerraformWorkShop/System/VyOS-consul/traefik/traefik.service
@@ -16,7 +16,7 @@ Environment=LEGO_CA_CERTIFICATES=${LEGO_CA_CERTIFICATES}
 # https://www.freedesktop.org/software/systemd/man/latest/systemd.service.html#Type=
 Type=notify
 AmbientCapabilities=CAP_NET_BIND_SERVICE
-ExecStartPre=/usr/bin/sleep 5
+# ExecStartPre=/usr/bin/sleep 3
 # https://doc.traefik.io/traefik/getting-started/configuration-overview/#configuration-file
 ExecStart=/usr/bin/traefik
 
@@ -27,8 +27,8 @@ ProtectSystem=full
 PermissionsStartOnly=true
 NoNewPrivileges=true
 LimitNOFILE=32768
-Restart=always
-RestartSec=2
+Restart=on-failure
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
