--- a/TerraformWorkShop/System/VyOS-lldap/lldap/lldap.service
+++ b/TerraformWorkShop/System/VyOS-lldap/lldap/lldap.service
@@ -9,14 +9,13 @@ Type=simple
 User=${user}
 Group=${group}
 AmbientCapabilities=CAP_NET_BIND_SERVICE
-ExecStartPre=/usr/bin/sleep 8
 ExecStart=/usr/bin/lldap run --config-file /etc/lldap/lldap_config.toml
 PrivateTmp=true
 PrivateDevices=true
 ProtectHome=true
 ProtectSystem=full
-Restart=always
-RestartSec=3
+Restart=on-failure
+RestartSec=5
 WorkingDirectory=${WorkingDirectory}
 ReadWriteDirectories=${ReadWriteDirectories}
 
