--- a/TerraformWorkShop/System/Infra-vault/vault/vault.service
+++ b/TerraformWorkShop/System/Infra-vault/vault/vault.service
@@ -2,8 +2,8 @@
 [Unit]
 Description="HashiCorp Vault - A tool for managing secrets"
 Documentation=https://developer.hashicorp.com/vault/docs
-Requires=network-online.target consul.service
-After=network-online.target consul.service
+Requires=network-online.target
+After=network-online.target
 ConditionFileNotEmpty=/etc/vault.d/vault.hcl
 StartLimitIntervalSec=60
 StartLimitBurst=3
