terraform-system-traefik: update module, use content and basename directly; update acme config; update vault root ca retrieve method;

--- a/TerraformWorkShop/System/Infra-traefik/traefik/dyn-traefik_dashboard.yaml
+++ b/TerraformWorkShop/System/Infra-traefik/traefik/dyn-traefik_dashboard.yaml
@@ -24,7 +24,8 @@ http:
         - websecure
       middlewares:
         - userpass
-      tls: true
+      tls:
+        certresolver: internal
   middlewares:
     userpass:
       basicAuth:
