--- a/TerraformWorkShop/System/Infra-lldap/lldap/lldap_config.toml
+++ b/TerraformWorkShop/System/Infra-lldap/lldap/lldap_config.toml
@@ -1,4 +1,9 @@
+# https://github.com/lldap/lldap/blob/main/lldap_config.docker_template.toml
 # https://build.opensuse.org/package/view_file/home:Masgalor:LLDAP/lldap/lldap_config.toml?expand=1
+## All the values can be overridden through environment variables, prefixed
+## with "LLDAP_". For instance, "ldap_port" can be overridden with the
+## "LLDAP_LDAP_PORT" variable.
+
 ## Tune the logging to be more verbose by setting this to be true.
 ## You can set it with the LLDAP_VERBOSE environment variable.
 # verbose=false
@@ -134,14 +139,14 @@ key_file = "/var/lib/lldap/private_key"
 ## To set these options from environment variables, use the following format
 ## (example with "port"): LLDAP_LDAPS_OPTIONS__PORT
 [ldaps_options]
-## Whether to enable LDAPS.
+## Whether to enable LDAPS. LLDAP_LDAPS_OPTIONS__ENABLED
 enabled=${ldaps_enabled}
 %{ if ldaps_enabled == "true" }
-## Port on which to listen.
+## Port on which to listen. LLDAP_LDAPS_OPTIONS__PORT
 port=${ldaps_port}
-## Certificate file.
+## Certificate file. LLDAP_LDAPS_OPTIONS__CERT_FILE
 cert_file="${ldaps_cert_file}"
-## Certificate key file.
+## Certificate key file. LLDAP_LDAPS_OPTIONS__KEY_FILE
 key_file="${ldaps_key_file}"
 %{ endif }
 
